lab_2. Plotted the antenna pattern fuctions.

--- a/lab_1.ipynb
+++ b/lab_1.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5efeb8cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lab_1.lab_1_part_1 import *\n",
+    "from lab_1.signal import *\n",
     "\n",
     "T = 64 # Total time duration in seconds\n",
     "A = 1.0 # Amplitude\n",
